# mrbncm-app

./: .gitmodules  DONT_README.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
src/: App.tsx  index.sass  index.tsx  ncm-api.ts  ncm-cookie.ts  tauri-api.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/libs/libaes/: Cargo.toml  README.md
src-tauri/libs/libaes/src/: lib.rs
src-tauri/src/: eapi.rs  main.rs  ncm.rs  rc4.rs
src-tauri/src/audio/: mod.rs  output.rs  player.rs
src/components/AMLLWrapper/: index.tsx
src/components/BottomPlayControls/: index.sass  index.tsx
src/components/LazyImage/: index.tsx
src/components/NowPlayingSlider/: index.sass  index.tsx
src/components/PlaylistView/: index.sass  index.tsx
src/components/TextMarquee/: index.sass  index.tsx
src/pages/: index.tsx
src/pages/Error/: index.sass  index.tsx
src/pages/Login/: index.tsx
src/pages/Main/: index.sass  index.tsx
src/pages/Playlist/: index.sass  index.tsx
src/pages/Search/: index.sass  index.tsx
src/pages/Settings/: index.sass  index.tsx
src/utils/: format.ts
