[package]
name = "mrbncm-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
debug = false
strip = true

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["api-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.70"
byteorder = "1.4.3"
base64 = "0.21.0"
rc4 = "0.1.0"
libaes = { path = "./libs/libaes" }
rodio = "0.17.1"
once_cell = "1.17.1"
md5 = "0.7.0"
faster-hex = "0.6.1"
concat-string = "1.0.1"
sqlx = "0.6.3"
pollster = "0.3.0"
cpal = "0.15.2"
symphonia = { version = "0.5.2", features = ["all"] }
attohttpc = { version =  "0.25", features = ["json", "form"] }
ringbuf = "0.3.3"
rubato = "0.12.0"
arrayvec = "0.7.2"
rb = "0.4.1"

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "dev"
features = ["sqlite"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
